# BattleshipConsole

./: CMakeLists.txt
source/: Board.cpp  Board.h  Coordinates.cpp  Coordinates.h  Globals.h  Pieces.cpp  Pieces.h  Render.cpp  Render.h  Turn.cpp  Turn.h  main.cpp
source/saves/: presetOne.txt  presetThree.txt  presetTwo.txt
